Fix - overflow hidden dashboard

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -222,6 +222,7 @@
   }
   .grid-container {
     margin-top: 100px;
+    overflow-y: hidden;
   }
 }
 
